software factory/installer-connected/ring-0/aks/src/runtime/manifests/gatekeeper/k8s_objects/acceptable_subject_kind_in_rolebindings-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: acceptablesubjectkindinrolebindings
spec:
  crd:
    spec:
      names:
        kind: "acceptablesubjectkindinrolebindings"
      validation:
        openAPIV3Schema:
          properties:
            allowedsubjectkinds:
              type: "array"
              items:
                type: "string"

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package com.microsoft.c12.acceptablesubjectkindinrolebindings

        violation[{"msg": msg}] {
          subject := input.review.object.subjects[_]
          kindofsubject := subject.kind
          satisfied := [good | allowedsubjectkind := input.parameters.allowedsubjectkinds[_] ; good = equal(kindofsubject, allowedsubjectkind)]
          not any(satisfied)
          msg := sprintf("The role binding called %v uses a %v object to scope access. This is not allowed. Only the following kinds are allowed: %s.", [input.review.object.metadata.name, kindofsubject, input.parameters.allowedsubjectkinds])
          }
