software factory/installer-connected/ring-0/aks/src/runtime/manifests/gatekeeper/k8s_objects/capabilities-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPCapabilities
metadata:
  name: "capabilities"
spec:
  match:
    kinds:
      - apiGroups: [""]
        
        kinds:
        - "Pod"
        
  parameters:
    allowedCapabilities: []
    requiredDropCapabilities: []
