software factory/installer-connected/ring-0/aks/src/runtime/manifests/gatekeeper/k8s_objects/forbidden-sysctls-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPForbiddenSysctls
metadata:
  name: "forbiddensysctls"
spec:
  match:
    kinds:
      - apiGroups: [""]
        
        kinds:
        - "Pod"
        
  parameters:
    forbiddenSysctls: ['kernel.*']
