software factory/installer-connected/ring-0/aks/src/runtime/manifests/gatekeeper/k8s_objects/host-namespaces-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNamespace
metadata:
  name: "hostnamespaces"
spec:
  match:
    kinds:
      - apiGroups: [""]
        
        kinds:
        - "Pod"
