software factory/installer-connected/ring-0/aks/src/runtime/manifests/gatekeeper/k8s_objects/read-only-root-filesystem-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPReadOnlyRootFilesystem
metadata:
  name: "readonlyrootfilesystem"
spec:
  match:
    kinds:
      - apiGroups: [""]
        
        kinds:
        - "Pod"
