software factory/installer-connected/ring-0/aks/src/runtime/manifests/gatekeeper/k8s_objects/seccomp-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPSeccomp
metadata:
  name: "seccomp"
spec:
  match:
    kinds:
      - apiGroups: [""]
        
        kinds:
        - "Pod"
        
  parameters:
    allowedProfiles: ['runtime/default', 'docker/default']
