software factory/installer-connected/ring-0/aks/src/runtime/manifests/gatekeeper/k8s_objects/users-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: "users"
spec:
  match:
    kinds:
      - apiGroups: [""]
        
        kinds:
        - "Pod"
        
  parameters:
    runAsUser: {'rule': 'MustRunAs', 'ranges': [{'min': 1000, 'max': 2000}]}
